# pathfinder

./: .gitignore  CMakeLists.txt  README.md  compile_dependencies.sh  compile_make.sh  compile_xcode.sh  make.sh
include/: pathfinder.h
src/pathfinder/: pathfinder.c  pathfinder_context.h
src/test/: test.c
